packages/zarf-agent/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agent-hook
  namespace: jackal
  labels:
    app: agent-hook
spec:
  replicas: 2
  selector:
    matchLabels:
      app: agent-hook
  template:
    metadata:
      labels:
        app: agent-hook
        # Don't mutate this pod, that would be sad times
        jackal.dev/agent: ignore
    spec:
      imagePullSecrets:
        - name: private-registry
      priorityClassName: system-node-critical
      containers:
        - name: server
          image: "###JACKAL_REGISTRY###/###JACKAL_CONST_AGENT_IMAGE###:###JACKAL_CONST_AGENT_IMAGE_TAG###"
          imagePullPolicy: IfNotPresent
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8443
              scheme: HTTPS
          ports:
            - containerPort: 8443
          resources:
            requests:
              memory: "32Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "500m"
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/certs
              readOnly: true
            - name: jackal-state
              mountPath: /etc/jackal-state
              readOnly: true
            # Required for OpenShift to mount k9s vendored directories
            - name: config
              mountPath: /.config
            - name: xdg
              mountPath: /etc/xdg
      volumes:
        - name: tls-certs
          secret:
            secretName: agent-hook-tls
        - name: jackal-state
          secret:
            secretName: jackal-state
        # Required for OpenShift to mount k9s vendored directories
        - name: config
          emptyDir: {}
        - name: xdg
          emptyDir: {}
