packages/zarf-agent/manifests/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: jackal
webhooks:
  - name: agent-pod.jackal.dev
    namespaceSelector:
      matchExpressions:
        - key: "kubernetes.io/metadata.name"
          operator: NotIn
          values:
            # Ensure we don't mess with kube-system
            - "kube-system"
        # Allow ignoring whole namespaces
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    objectSelector:
      matchExpressions:
        # Always ignore specific resources if requested by annotation/label
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
        # Ignore K3s Klipper
        - key: svccontroller.k3s.cattle.io/svcname
          operator: DoesNotExist
    clientConfig:
      service:
        name: agent-hook
        namespace: jackal
        path: "/mutate/pod"
      caBundle: "###JACKAL_AGENT_CA###"
    rules:
      - operations:
          - "CREATE"
          - "UPDATE"
        apiGroups:
          - ""
        apiVersions:
          - "v1"
        resources:
          - "pods"
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    sideEffects: None
  - name: agent-flux-gitrepo.jackal.dev
    namespaceSelector:
      matchExpressions:
        # Ensure we don't mess with kube-system
        - key: "kubernetes.io/metadata.name"
          operator: NotIn
          values:
            - "kube-system"
        # Allow ignoring whole namespaces
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    objectSelector:
      matchExpressions:
        # Always ignore specific resources if requested by annotation/label
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    clientConfig:
      service:
        name: agent-hook
        namespace: jackal
        path: "/mutate/flux-gitrepository"
      caBundle: "###JACKAL_AGENT_CA###"
    rules:
      - operations:
          - "CREATE"
          - "UPDATE"
        apiGroups:
          - "source.toolkit.fluxcd.io"
        apiVersions:
          - "v1beta1"
          - "v1beta2"
          - "v1"
        resources:
          - "gitrepositories"
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    sideEffects: None
  - name: agent-argocd-application.jackal.dev
    namespaceSelector:
      matchExpressions:
        # Ensure we don't mess with kube-system
        - key: "kubernetes.io/metadata.name"
          operator: NotIn
          values:
            - "kube-system"
        # Allow ignoring whole namespaces
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    objectSelector:
      matchExpressions:
        # Always ignore specific resources if requested by annotation/label
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    clientConfig:
      service:
        name: agent-hook
        namespace: jackal
        path: "/mutate/argocd-application"
      caBundle: "###JACKAL_AGENT_CA###"
    rules:
      - operations:
          - "CREATE"
          - "UPDATE"
        apiGroups:
          - "argoproj.io"
        apiVersions:
          - "v1alpha1"
        resources:
          - "applications"
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    sideEffects: None
  - name: agent-argocd-repository.jackal.dev
    namespaceSelector:
      matchExpressions:
        # Ensure we don't mess with kube-system
        - key: "kubernetes.io/metadata.name"
          operator: NotIn
          values:
            - "kube-system"
        # Allow ignoring whole namespaces
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
    objectSelector:
      matchExpressions:
        # Always ignore specific resources if requested by annotation/label
        - key: jackal.dev/agent
          operator: NotIn
          values:
            - "skip"
            - "ignore"
        - key: argocd.argoproj.io/secret-type
          operator: In
          values:
            - repository
    clientConfig:
      service:
        name: agent-hook
        namespace: jackal
        path: "/mutate/argocd-repository"
      caBundle: "###JACKAL_AGENT_CA###"
    rules:
      - operations:
          - "CREATE"
          - "UPDATE"
        apiGroups:
          - ""
        apiVersions:
          - "v1"
        resources:
          - "secrets"
    admissionReviewVersions:
      - "v1"
      - "v1beta1"
    sideEffects: None
